@@ -1,1 +1,2 @@
-nobase_include_HEADERS = AL/al.h AL/alc.h
+SUBDIRS = include
+
